--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "0.2.5",
+    "@supabase/supabase-auth-helpers": "1.4.2",
+    "@supabase/ui": "0.36.5",
     "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
