--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,22 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#333333",
-		"activityBar.activeBorder": "#787828",
-		"activityBar.background": "#333333",
-		"activityBar.foreground": "#e7e7e7",
-		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#787828",
-		"activityBarBadge.foreground": "#e7e7e7",
-		"sash.hoverBorder": "#333333",
-		"statusBar.background": "#1a1a1a",
-		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#333333",
-		"statusBarItem.remoteBackground": "#1a1a1a",
-		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#1a1a1a",
-		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#1a1a1a99",
-		"titleBar.inactiveForeground": "#e7e7e799",
-		"commandCenter.border": "#e7e7e799"
+		"activityBar.activeBackground": "#e9f4fd",
+		"activityBar.background": "#e9f4fd",
+		"activityBar.foreground": "#15202b",
+		"activityBar.inactiveForeground": "#15202b99",
+		"activityBarBadge.background": "#f48ac5",
+		"activityBarBadge.foreground": "#15202b",
+		"commandCenter.border": "#15202b99",
+		"sash.hoverBorder": "#e9f4fd",
+		"statusBar.background": "#baddf9",
+		"statusBar.foreground": "#15202b",
+		"statusBarItem.hoverBackground": "#8bc6f5",
+		"statusBarItem.remoteBackground": "#baddf9",
+		"statusBarItem.remoteForeground": "#15202b",
+		"titleBar.activeBackground": "#baddf9",
+		"titleBar.activeForeground": "#15202b",
+		"titleBar.inactiveBackground": "#baddf999",
+		"titleBar.inactiveForeground": "#15202b99"
 	},
-	"peacock.color": "#1a1a1a"
+	"peacock.color": "#baddf9"
 }
