--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#333333",
+		"activityBar.activeBackground": "#5a5a5a",
 		"activityBar.activeBorder": "#787828",
-		"activityBar.background": "#333333",
+		"activityBar.background": "#5a5a5a",
 		"activityBar.foreground": "#e7e7e7",
 		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#787828",
+		"activityBarBadge.background": "#103010",
 		"activityBarBadge.foreground": "#e7e7e7",
-		"sash.hoverBorder": "#333333",
-		"statusBar.background": "#1a1a1a",
+		"sash.hoverBorder": "#5a5a5a",
+		"statusBar.background": "#414141",
 		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#333333",
-		"statusBarItem.remoteBackground": "#1a1a1a",
+		"statusBarItem.hoverBackground": "#5a5a5a",
+		"statusBarItem.remoteBackground": "#414141",
 		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#1a1a1a",
+		"titleBar.activeBackground": "#414141",
 		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#1a1a1a99",
+		"titleBar.inactiveBackground": "#41414199",
 		"titleBar.inactiveForeground": "#e7e7e799",
 		"commandCenter.border": "#e7e7e799"
 	},
-	"peacock.color": "#1a1a1a"
+	"peacock.color": "#414141"
 }
