--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,18 @@
     "@supabase/auth-helpers-nextjs": "0.2.5",
     "@supabase/supabase-auth-helpers": "1.4.2",
     "@supabase/ui": "0.36.5",
+    "mapbox-gl": "2.10.0",
     "next": "12.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-form": "4.0.1"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "2.7.5",
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-form": "4.0.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
