--- a/backend/example_dot_github/workflows/deploy-to-staging.yml
+++ b/backend/example_dot_github/workflows/deploy-to-staging.yml
@@ -16,13 +16,13 @@ jobs:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       STAGING_PROJECT_ID: ${{ secrets.PROJECT_ID }}
-
+      SUPABASE_INTERNAL_IMAGE_REGISTRY: ghcr.io
     steps:
       - uses: actions/checkout@v3
 
       - uses: supabase/setup-cli@v1
         with:
-          version: 1.4.0
+          version: 1.33.0
 
       - run: |
           cd backend
